//
//  Category.swift
//  Smart List
//
//  Created by Haamed Sultani on Jan/1/19.
//  Copyright © 2019 Haamed Sultani. All rights reserved.
//

import Foundation

enum CategoryEnum: String {
    case Produce = "Produce"
    case Bakery = "Bakery"
    case Meat = "Meat/Seafood"
    case Dairy = "Dairy"
    case Packaged = "Packaged/Canned"
    case Frozen = "Frozen"
    case Other = "Other"
}
