...
    var nameText: UITextField = {
        var textField = UITextField()
        textField.returnKeyType = .done // Change the return key to "Done" instead of "return"
        textField.translatesAutoresizingMaskIntoConstraints = false // Use Auto Layout
        textField.textAlignment = .left
        textField.textColor = Constants.ColorPalette.DarkGray
        textField.attributedPlaceholder = NSAttributedString(string: "tap here to start",
                                                             attributes: [
                                                                NSAttributedString.Key.foregroundColor: Constants.ColorPalette.BabyBlue]) // Set placeholder text for the cell
        
        return textField
    }()
    
...
