...
                                </items>
                            </tabBar>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <viewLayoutGuide key="safeArea" id="b5X-3h-LRL"/>
                    </view>
                    <navigationItem key="navigationItem" title="Shopping List" id="SSV-LG-JDW"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="B68-rK-hrA" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-3589.8550724637685" y="-1933.2589285714284"/>
        </scene>
        <!--Navigation Controller-->
...
