...
    /// Purpose: This method is called when the user taps on the + sign at the top right
    ///
    /// Allows the user to add a category to the TableView
    /// They are presented with a list of options, one of them being an option to add their own
    @objc func addButtonTapped() {
        // Create the alert controller
        let alert = UIAlertController(title: "New category", message: "Which category would you like to create?", preferredStyle: .actionSheet)
        
        
        for cat in validateCategories() {
            alert.addAction(UIAlertAction(title: cat, style: .default, handler: {(UIAlertAction) in
                self.tableView.beginUpdates()
                
...
